--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/dist/
 
 # Runtime data
 pids
@@ -96,6 +97,7 @@ typings/
 !.vscode/launch.json
 !.vscode/extensions.json
 .history
+.editorconfig
 
 ### Windows ###
 # Windows thumbnail cache files
@@ -120,3 +122,13 @@ $RECYCLE.BIN/
 
 
 # End of https://www.gitignore.io/api/node,macos,windows,visualstudiocode
+/test/unit/coverage
+/test/e2e/reports
+selenium-debug.log
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
